@@ -10,11 +10,11 @@ weight = 3
 * 开发环境配置：[开发环境安装](../../develop-env/)
 * 数据环境准备：[数据初始化](../init/)
 * Demo程序已经开发完毕，详见 [开发Demo程序](../../demo/)
-* 启动 `mysql`，`redis`，`kafka`等容器
+* 启动 `mysql`，`redis`等容器
 
 ## 介绍
 
-本小节介绍如何在本地通过choerodon 来进行微服务开发。
+本小节介绍如何在本地通过 `Choerodon` 来进行微服务开发。
 
 ## 启动`todo` 服务
 
@@ -89,7 +89,7 @@ permissionPublic | 公开接口，默认为false
 * gateway-helper
 * oauth-server
 
-**3.** 然后通过`api-gateway` 的输出日志，获取登录用户的`jwt_token`。然后添加请求头。
+**3.** 然后通过`api-gateway` 的输出日志，获取登录用户的 `jwt_token`。然后添加请求头。
 
 ``` json
 {
@@ -99,68 +99,22 @@ permissionPublic | 公开接口，默认为false
 
 ## 启动相关服务
 
-如果需要启动其他模块，可以再[github](https://github.com/choerodon/)上获取到对应服务的最新代码，克隆到本地，将`./src/main/resources/application.yml` 复制一份出来，修改里面的默认值。根据本地环境信息，修改数据库和kafka连接。
+如果需要启动其他模块，可以在[github](https://github.com/choerodon/)上获取到对应服务的最新代码，克隆到本地，将`./src/main/resources/application.yml` 复制一份出来，修改里面的默认值。根据本地环境信息，修改数据库和kafka连接。
 
 ``` bash
 $ cp ./src/main/resources/application.yml ./src/main/resources/application-default.yml
 $ mvn clean spring-boot:run
 ```
 
-这里提供一份`docker-compose.yaml`仅供参考，具体根据配置修改本地程序的配置。
+这里提供一份`docker-compose.yaml`仅供参考，具体根据配置修改本地程序的配置。服务启动之前，请确保`iam-service` 和 `manager-service` 的数据库已初始化完成。
 
 ``` yaml
 version: "3"
 services:
-  zookeeper-0:
-    container_name: zookeeper-0
-    image: registry.saas.hand-china.com/tools/zookeeper:3.4.10
-    hostname: zookeeper-0
-    environment:
-    - ZK_REPLICAS=1
-    - ZK_HEAP_SIZE=2G
-    - ZK_TICK_TIME=2000
-    - ZK_INIT_LIMIT=10
-    - ZK_SYNC_LIMIT=5
-    - ZK_MAX_CLIENT_CNXNS=60
-    - ZK_SNAP_RETAIN_COUNT=3
-    - ZK_PURGE_INTERVAL=1
-    - ZK_LOG_LEVEL=INFO
-    - ZK_CLIENT_PORT=2181
-    - ZK_SERVER_PORT=2888
-    - ZK_ELECTION_PORT=3888
-    ports:
-    - "2181:2181"
-    - "2888:2888"
-    - "3888:3888"
-    command:
-    - sh
-    - -c
-    - zkGenConfig.sh && exec zkServer.sh start-foreground
-    volumes:
-    - "./kafka/zk:/var/lib/zookeeper"
-  kafka-0:
-    container_name: kafka-0
-    image: registry.cn-hangzhou.aliyuncs.com/choerodon-tools/kafka:1.0.0
-    hostname: kafka-0
-    depends_on:
-    - zookeeper-0
-    links:
-    - zookeeper-0
-    ports:
-    - "9092:9092"
-    command:
-    - sh
-    - -c
-    - "/opt/kafka/bin/kafka-server-start.sh config/server.properties \
-           --override zookeeper.connect=zookeeper-0:2181 \
-           --override log.dirs=/opt/kafka/data/logs \
-           --override broker.id=0 "
-    volumes:
-    - "./kafka/kafka:/opt/kafka/data"
   mysql:
     container_name: mysql
-    image: registry.cn-hangzhou.aliyuncs.com/choerodon-tools/mysql:5.7.17
     hostname: mysql
+    image: registry.cn-hangzhou.aliyuncs.com/choerodon-tools/mysql:5.7.17
     ports:
     - "3306:3306"
     environment:
@@ -168,30 +122,41 @@ services:
     volumes:
     - ./mysql/mysql_data:/var/lib/mysql
     - ./mysql/mysql_db.cnf:/etc/mysql/conf.d/mysql_db.cnf
+    - ./mysql/init_user.sql:/docker-entrypoint-initdb.d/init_user.sql
     expose:
     - "3306"
+    networks:
+    - "c7nNetwork"
+  redis:
+    container_name: redis
+    hostname: redis
+    image: redis:4.0.11
+    ports:
+    - "6379:6379"
+    expose:
+    - "6379"
+    networks:
+    - "c7nNetwork"
   eureka-server:
     container_name: eureka-server
     hostname: eureka-server
-    image: registry.cn-shanghai.aliyuncs.com/choerodon/eureka-server:0.6.0
+    image: registry.choerodon.com.cn/choerodon-framework/eureka-server:0.9.0
     ports:
     - "8000:8000"
-    links:
-    - kafka-0
     environment:
-    - spring.kafka.bootstrap-servers=kafka-0:9092
-    - eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8000/eureka/
-    - eureka.client.register-with-eureka=false
-    - eureka.client.fetch-registry=false
-    - hystrix.stream.queue.enabled=false
-    - spring.cloud.bus.enabled=false
-    - spring.sleuth.stream.enabled=false
-    - logging.level=WARN
+    - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka-server:8000/eureka/
+    - EUREKA_CLIENT_REGISTER_WITH_EUREKA=false
+    - EUREKA_CLIENT_FETCH_REGISTRY=false
+    - LOGGING_LEVEL=WARN
+    - JAVA_OPTS=-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Xms256M -Xmx512M
     expose:
     - "8000"
+    networks:
+    - "c7nNetwork"
   api-gateway:
     container_name: api-gateway
-    image: registry.cn-shanghai.aliyuncs.com/choerodon/api-gateway:0.6.0
+    hostname: api-gateway
+    image: registry.cn-shanghai.aliyuncs.com/choerodon/api-gateway:0.11.0
     links: 
     - eureka-server
     depends_on:
@@ -199,124 +164,144 @@ services:
     ports:
     - "8080:8080"
     environment:
-    - zuul.addHostHeader=true
-    - zuul.routes.dev.path=/todo/**
-    - zuul.routes.dev.serviceId=choerodon-todo-service
-    - eureka.client.serviceUrl.defaultZone=http://eureka-server:8000/eureka/
-    - hystrix.stream.queue.enabled=false
-    - spring.cloud.bus.enabled=false
-    - spring.sleuth.stream.enabled=false
-    - logging.level=WARN
+    - SPRING_CLOUD_CONFIG_ENABLED=false
+    - HYSTRIX_STREAM_QUEUE_ENABLED=false
+    - SPRING_CLOUD_BUS_ENABLED=false
+    - SPRING_SLEUTH_STREAM_ENABLED=false
+    - LOGGING_LEVEL=WARN
+    - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka-server:8000/eureka/
+    - ZUUL_ADDHOSTHEADER=true
+    - ZUUL_ROUTES_DEV_PATH=/todo/**
+    - ZUUL_ROUTES_DEV_SERVICEID=choerodon-todo-service
+    - JAVA_OPTS=-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Xms512M -Xmx768M
     expose:
     - "8080"
+    networks:
+    - "c7nNetwork"
   gateway-helper:
     container_name: gateway-helper
-    image: registry.cn-shanghai.aliyuncs.com/choerodon/gateway-helper:0.6.0
+    image: registry.cn-shanghai.aliyuncs.com/choerodon/gateway-helper:0.11.0
     depends_on:
     - eureka-server
+    - redis
     - mysql
+    - redis
     links: 
     - eureka-server
+    - redis
     - mysql
+    - redis
     ports:
     - "9180:9180"
     environment:
-    - eureka.client.serviceUrl.defaultZone=http://eureka-server:8000/eureka/
-    - spring.datasource.url=jdbc:mysql://mysql/iam_service?useUnicode=true&characterEncoding=utf-8&useSSL=false
-    - spring.datasource.username=root
-    - spring.datasource.password=root
-    - hystrix.stream.queue.enabled=false
-    - spring.cloud.bus.enabled=false
-    - spring.sleuth.stream.enabled=false
-    - logging.level=WARN
+    - SPRING_CLOUD_CONFIG_ENABLED=false
+    - HYSTRIX_STREAM_QUEUE_ENABLED=false
+    - SPRING_CLOUD_BUS_ENABLED=false
+    - SPRING_SLEUTH_STREAM_ENABLED=false
+    - LOGGING_LEVEL=WARN
+    - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka-server:8000/eureka/
+    - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/iam_service?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    - SPRING_DATASOURCE_USERNAME=choerodon
+    - SPRING_DATASOURCE_PASSWORD=123456
+    - SPRINT_CACHE_NULTI_L1_ENABLED=false
+    - SPRINT_CACHE_NULTI_L2_ENABLED=false
+    - SPRINT_REDIS_HOST=redis
+    - SPRING_REDIS_PORT=6379
+    - SPRING_REDIS_DATABASE=4
+    - choerodon.helper.permission.check.multiply.match=false
+    - JAVA_OPTS=-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Xms512M -Xmx768M
+    networks:
+    - "c7nNetwork"
   iam-service:
     container_name: iam-service
-    image: registry.cn-shanghai.aliyuncs.com/choerodon/iam-service:0.6.0
+    image: registry.cn-shanghai.aliyuncs.com/choerodon/iam-service:0.11.0
     depends_on:
     - eureka-server
     - mysql
-    - kafka-0
     links: 
     - eureka-server
     - mysql
-    - kafka-0
     ports:
     - "8030:8030"
     environment:
-    - eureka.client.serviceUrl.defaultZone=http://eureka-server:8000/eureka/
-    - spring.kafka.bootstrap-servers=kafka-0:9092
-    - spring.datasource.url=jdbc:mysql://mysql/iam_service?useUnicode=true&characterEncoding=utf-8&useSSL=false
-    - spring.datasource.username=root
-    - spring.datasource.password=root
-    - hystrix.stream.queue.enabled=false
-    - spring.cloud.bus.enabled=false
-    - spring.sleuth.stream.enabled=false
-    - logging.level=WARN
+    - SPRING_CLOUD_CONFIG_ENABLED=false
+    - HYSTRIX_STREAM_QUEUE_ENABLED=false
+    - SPRING_CLOUD_BUS_ENABLED=false
+    - SPRING_SLEUTH_STREAM_ENABLED=false
+    - LOGGING_LEVEL=WARN
+    - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka-server:8000/eureka/
+    - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/iam_service?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    - SPRING_DATASOURCE_USERNAME=choerodon
+    - SPRING_DATASOURCE_PASSWORD=123456
+    - CHOERODON_SAGA_CONSUMER_ENABLED=false
+    - CHOERODON_SCHEDULE_CONSUMER_ENABLED=false
+    - JAVA_OPTS=-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Xms512M -Xmx768M
+    networks:
+    - "c7nNetwork"
   manager-service:
     container_name: manager-service
-    image: registry.cn-shanghai.aliyuncs.com/choerodon/manager-service:0.6.0
+    image: registry.cn-shanghai.aliyuncs.com/choerodon/manager-service:0.11.0
     depends_on:
     - eureka-server
     - mysql
-    - kafka-0
     links: 
     - eureka-server
     - mysql
-    - kafka-0
     ports:
     - "8963:8963"
     environment:
-    - spring.kafka.bootstrap-servers=kafka-0:9092
-    - eureka.client.serviceUrl.defaultZone=http://eureka-server:8000/eureka/
-    - spring.datasource.url=jdbc:mysql://mysql/manager_service?useUnicode=true&characterEncoding=utf-8&useSSL=false
-    - spring.datasource.username=root
-    - spring.datasource.password=root
-    - hystrix.stream.queue.enabled=false
-    - spring.cloud.bus.enabled=false
-    - spring.sleuth.stream.enabled=false
-    - logging.level=WARN
+    - SPRING_CLOUD_CONFIG_ENABLED=false
+    - HYSTRIX_STREAM_QUEUE_ENABLED=false
+    - SPRING_CLOUD_BUS_ENABLED=false
+    - SPRING_SLEUTH_STREAM_ENABLED=false
+    - LOGGING_LEVEL=WARN
+    - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka-server:8000/eureka/
+    - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/manager_service?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    - SPRING_DATASOURCE_USERNAME=choerodon
+    - SPRING_DATASOURCE_PASSWORD=123456
+    - CHOERODON_SWAGGER_CLIENT=client
+    - CHOERODON_SWAGGER_OAUTH_URL=http://api-gateway:8080/oauth/oauth/authorize
+    - CHOERODON_GATEWAY_DOMAIN=api-gateway:8080
+    - JAVA_OPTS=-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Xms512M -Xmx768M
+    networks:
+    - "c7nNetwork"
   oauth-server:
     container_name: oauth-server
-    image: registry.cn-shanghai.aliyuncs.com/choerodon/oauth-server:0.6.0
+    image: registry.cn-shanghai.aliyuncs.com/choerodon/oauth-server:0.11.0
     depends_on:
     - eureka-server
+    - redis
     - mysql
+    - redis
     links: 
     - eureka-server
+    - redis
     - mysql
+    - redis
     ports:
     - "8020:8020"
     environment:
-    - eureka.client.serviceUrl.defaultZone=http://eureka-server:8000/eureka/
-    - spring.datasource.username=root
-    - spring.datasource.url=jdbc:mysql://mysql/iam_service?useUnicode=true&characterEncoding=utf-8&useSSL=false
-    - spring.datasource.password=root
-    - hystrix.stream.queue.enabled=false
-    - spring.cloud.bus.enabled=false
-    - spring.sleuth.stream.enabled=false
-    - logging.level=WARN
-  manager-service:
-    container_name: manager-service
-    image: registry.cn-shanghai.aliyuncs.com/choerodon/manager-service:0.6.0
-    depends_on:
-    - eureka-server
-    - mysql
-    links: 
-    - eureka-server
-    - mysql
-    environment:
-    - eureka.client.serviceUrl.defaultZone=http://eureka-server:8000/eureka/
-    - spring.datasource.username=root
-    - spring.datasource.url=jdbc:mysql://mysql/manager_service?useUnicode=true&characterEncoding=utf-8&useSSL=false
-    - spring.datasource.password=root
-    - hystrix.stream.queue.enabled=false
-    - spring.cloud.bus.enabled=false
-    - spring.sleuth.stream.enabled=false
-    - choerodon.swagger.oauth.url=http://oauth-server8020/oauth/oauth/authorize
-    - choerodon.gateway.domain=http://api-gateway:8080
-    - logging.level=WARN
-    ports:
-    - "8963:8963"
+    - SPRING_CLOUD_CONFIG_ENABLED=false
+    - HYSTRIX_STREAM_QUEUE_ENABLED=false
+    - SPRING_CLOUD_BUS_ENABLED=false
+    - SPRING_SLEUTH_STREAM_ENABLED=false
+    - LOGGING_LEVEL=WARN
+    - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka-server:8000/eureka/
+    - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/iam_service?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    - SPRING_DATASOURCE_USERNAME=choerodon
+    - SPRING_DATASOURCE_PASSWORD=123456
+    - SPRINT_REDIS_HOST=redis
+    - SPRING_REDIS_PORT=6379
+    - SPRING_REDIS_DATABASE=4
+    - CHOERODON_OAUTH_LOGIN_SSL=false
+    - CHOERODON_OAUTH_LOGIN_PATH=/login
+    - CHOERODON_DEFAULT_REDIRECT_URL=http://localhost:9000
+    - JAVA_OPTS=-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Xms512M -Xmx768M
+    networks:
+    - "c7nNetwork"
+networks:
+  c7nNetwork:
+    driver: bridge
 ```
 
 > 有关Docker的更多信息请见[此处](https://docs.docker.com/)
